# core

./: .clang_complete  .gitignore  CMakeLists.txt  LIBRARIES.md  OBJECTIVES.md  OBJECTIVS.md  README.md  azure-pipelines.yml  build.bat  build.pl  build.sh  download_iex_deep.sh  format_code.sh  install_libwebsockets.sh  open  out.ogv  symbols.csv
.clangd/index/: iex.h.102B151C6011791B.idx  main.c.332E0E09ADF2B19E.idx
cmake/: FindLibWebSockets.cmake
doc/: OBJECTIVES.md  report.latex  report.toc
doc/analysis/: analysis.latex
docs/: riski.latex
docs/trendlines/: slopedtrends.latex
inc/: api.h  error_codes.h  logger.h  string_builder.h  tracer.h
inc/analysis/: analysis.h  doji.h  engulfing.h  enumations.h  horizontal_line.h  marubozu.h  spinning_top.h  trend_line.h
inc/book/: book.h
inc/chart/: candle.h  chart.h
inc/cjson/: cjson.h
inc/exchange/: exchange.h
inc/fxpig/: fix.h  fxpig.h  ini.h
inc/gui/: gui.h
inc/iex/: iex.h  packet.h
inc/lisp/: ast.h  lex.h  vm.h
inc/log/: log.h
inc/logger/: logger.h
inc/math/: integral.h  linear_equation.h
inc/oanda/: oanda.h  request_builder.h
inc/security/: search.h  security.h
inc/server/: message_parser.h  server.h
inc/smakel/: lex.h  vm.h
libs/: CMakeLists.txt
libs/candle/: engulfing_bullish.c  marubozu_bearish.c  marubozu_bullish.c  trend_line_bullish_bearish.c
scripts/: format_code.sh  generate_insertion_time.sh  log.sh  plot_line.py
src/: CMakeLists.txt  error_codes.c  logger.c  main.c  string_builder.c
src/analysis/: CMakeLists.txt  analysis.c  doji.c  engulfing.c  horizontal_line.c  marubozu.c  spinning_top.c  trend_line.c
src/book/: CMakeLists.txt  book.c
src/chart/: CMakeLists.txt  candle.c  chart.c
src/cjson/: CMakeLists.txt  cjson.c
src/exchange/: CMakeLists.txt  exchange.c
src/fxpig/: CMakeLists.txt  fix.c  fxpig.c  ini.c
src/gui/: CMakeLists.txt  gui.c
src/iex/: CMakeLists.txt  iex.c  packet.h  types.h
src/lisp/: CMakeLists.txt  ast.c  lex.c  vm.c
src/lisp/references/: HelloWorld.lisp  ast.bnf  grammar  lexer.bnf
src/log/: CMakeLists.txt  log.c
src/logger/: CMakeLists.txt  logger.c
src/math/: CMakeLists.txt  integral.c  linear_equation.c
src/oanda/: CMakeLists.txt  oanda.c  request_builder.c
src/security/: CMakeLists.txt  search.c  security.c
src/server/: CMakeLists.txt  message_parser.c  protocol_lws_minimal.c  server.c  server_client_comms.txt
src/smakel/: CMakeLists.txt  lex.c  vm.c
src/smakel/references/: HelloWorld.s  grammar
tlib/: marubuzu.lisp
web/: .eslintrc.json  download_icons.py  index.html  main.js  main.min.js  package-lock.json  package.json  svgchart.html  tsconfig.json
web/css/: global.css  index.css  treeview.css
web/css/ayu/: dark.css
web/ts/: IServerComsTypes.ts  Main.ts  ServerComs.ts  main.ts
web/ts/chart/: CandleView.ts  Chart.ts  IAnalysis.ts  IChart.ts  IChartRange.ts  ILinearEquation.ts  LinearEquation.ts  chart.ts
web/ts/math/: LinearEquation.ts
web/ts/svgchart/: IServerComsTypes.ts  SVGCandle.ts  SVGChart.ts  SVGServerComs.ts
web/ts/themes/: Dark.ts  ITheme.ts
