PROJECT(riski)

CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
SET(CMAKE_C_STANDARD 11)

IF(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR} )
    message(FATAL_ERROR
      "In-source builds not allowed."
      "Please make a new directory (called a build directory) "
      "and run CMake from there. You may need to remove CMakeCache.txt.")
ENDIF()

LIST(APPEND CMAKE_MODULE_PATH "/usr/local/lib/cmake")
LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")


FIND_PACKAGE(PCAP REQUIRED)
FIND_PACKAGE(Libwebsockets REQUIRED)
FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(OpenSSL REQUIRED)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
ADD_COMPILE_OPTIONS("-g" "-O0" "-Wall" "-Wextra" "-Werror" "-Wpedantic")

INCLUDE_DIRECTORIES(
  inc/
  ${PCAP_INCLUDE_DIRS}
  ${LIBWEBSOCKETS_INCLUDE_DIR}
  ${OPENSSL_INCLUDE_DIR}
)

LINK_DIRECTORIES(
  ${LIBWEBSOCKETS_LIBRARY_DIR}
  ${PCAP_LIBRARY_DIR}
  ${OPENSSL_LIBRARIES}
)

ADD_SUBDIRECTORY(libs/)
ADD_SUBDIRECTORY(src/)
